--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "aos": "^2.3.4",
     "axios": "^1.6.8",
     "lightgallery": "^2.8.2",
-    "react-countup": "^6.5.3",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.1",
     "react-router": "^6.23.1",
