--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.1",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "swiper": "^11.1.3"
